--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,8 +11,10 @@
     />
     <!-- overpass googlefont link -->
     <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <!--  -->
+     <!--  -->
+     <!-- font awesome cdn lin -->
+     <script src="https://kit.fontawesome.com/ab37c1628c.js"></script>
+     <!--  -->
     <!-- animation link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="apple-touch-icon" href="logo192.png" />
