finished sidenav and added style to trip list and fonts

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <!-- overpass googlefont link -->
-    <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Overpass|Josefin+Sans:400i|Merriweather|Roboto&display=swap&display=swap" rel="stylesheet">
      <!--  -->
      <!-- font awesome cdn lin -->
      <script src="https://kit.fontawesome.com/ab37c1628c.js"></script>
