--- a/public/map.html
+++ b/public/map.html
@@ -21,7 +21,7 @@
 </head>
 
 <body onload="initialize();">
-  <table border="1">
+  <table >
     <tr>
       <td valign="top">
         <div id="map" style="width: 600px; height: 500px;"></div>
