--- a/public/map.html
+++ b/public/map.html
@@ -13,6 +13,10 @@
   <script type="text/javascript" src="http://www.google.com/jsapi"></script>
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6Zh5HsEPeyGkktmpXijxz0NerXxlDq6Q&libraries=places"></script>
+
+  <!-- Added a link to Bootstrap-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
   <!-- Added a link to our external stylesheet-->
   <link rel="stylesheet" href="assets/css/style.css">
 
@@ -21,23 +25,21 @@
 </head>
 
 <body onload="initialize();">
-  <table >
-    <tr>
-      <td valign="top">
+  <div class="container">
+    <div class="containerMapOuter">
+      <div class="containerMapInner">
+        <div id="bannerImg"><img src="assets/images/RTripBanner.png"></div>
         <div id="map" style="width: 600px; height: 500px;"></div>
-      </td>
-      <td>
-        <div id="side_bar" style="width:200px; height: 600px; overflow: auto"></div>
-      </td>
-      <td>
-        <div id="zipcodes"></div>
-      </td>
-    </tr>
-  </table>
-  route from <input type="text" id="from" value="300 Atrium Drive, Somerset, NJ" />
-  to <input type="text" id="to" value="123 White Oak Lane, Old Bridge, NJ" />
-  <input type="submit" onclick="route()" /><br>
-  <div id="status"></div>
+
+        <div class="formFormat">
+          <input class="form-control" placeholder="Route from (Origin)" type="text" id="from" />
+          <input class="form-control" placeholder="Route to (Destination)" type="text" id="to" />
+          <input class="btn btn-dark btn-md" type="submit" onclick="route()" /><br>
+        </div>
+        <div id="status"></div>
+      </div>
+    </div>
+  </div>
 
 </body>
 
