--- a/public/map.html
+++ b/public/map.html
@@ -1018,9 +1018,9 @@
         </div>
         <div class="col-md-5">
           <div class="card">
-            <div class="card-header">Trip Name: </div>
+            <div class="card-header">Be Your Own Hero! </div>
             <div class="card-body">
-              <div class="card-title">Overall Safety Rating: </div>
+              <div class="card-title">Overall Safety Rating: 74%</div>
               <p class="card-text"> route from <input type="text" id="from" value="300 Atrium Drive, Somerset, NJ" />
               </p>
               <p class="card-text">Destination: <input type="text" id="to" value="123 White Oak Lane, Old Bridge, NJ" />
