--- a/public/map.html
+++ b/public/map.html
@@ -1018,14 +1018,14 @@
         </div>
         <div class="col-md-5">
           <div class="card">
-            <div class="card-header">Trip Name: </div>
+            <div class="card-header">Trip Name: Going to Disney!</div>
             <div class="card-body">
-              <div class="card-title">Overall Safety Rating: </div>
+              <div class="card-title">Overall Safety Rating: 72% </div>
               <p class="card-text"> route from <input type="text" id="from" value="300 Atrium Drive, Somerset, NJ" />
               </p>
               <p class="card-text">Destination: <input type="text" id="to" value="123 White Oak Lane, Old Bridge, NJ" />
               </p>
-              <p class="card-text">Number of stops: </p><button class="btn btn-secondary" type="submit"
+              <p class="card-text">Number of stops: 10</p><button class="btn btn-secondary" type="submit"
                 onclick="route()">Submit</button>
             </div>
             <div class="card-footer"><i class="fa fa-trash" aria-hidden="true" style="font-size: 30px;"></i>Delete Trip
